--- a/Udacity/Project_3_Analyze AB Test Results/Analyze_ab_test_results.ipynb
+++ b/Udacity/Project_3_Analyze AB Test Results/Analyze_ab_test_results.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,6 +45,87 @@
     "%matplotlib inline\n",
     "#We are setting the seed to assure you get the same answers on quizzes as we set up\n",
     "random.seed(42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<zipfile.ZipExtFile name='__MACOSX/._AnalyzeABTestResults 2' mode='r' compress_type=deflate>\n",
+      "<_io.BufferedWriter name='c:\\\\Users\\\\andrw\\\\DataProjects\\\\portfolio\\\\Udacity\\\\Project_3_Analyze AB Test Results\\\\._AnalyzeABTestResults 2'>\n",
+      "<zipfile.ZipExtFile name='__MACOSX/._AnalyzeABTestResults 2' mode='r' compress_type=deflate>\n",
+      "<_io.BufferedWriter name='c:\\\\Users\\\\andrw\\\\DataProjects\\\\portfolio\\\\Udacity\\\\Project_3_Analyze AB Test Results\\\\._AnalyzeABTestResults 2'>\n",
+      "<zipfile.ZipExtFile name='__MACOSX/._AnalyzeABTestResults 2' mode='r' compress_type=deflate>\n",
+      "<_io.BufferedWriter name='c:\\\\Users\\\\andrw\\\\DataProjects\\\\portfolio\\\\Udacity\\\\Project_3_Analyze AB Test Results\\\\._AnalyzeABTestResults 2'>\n",
+      "<zipfile.ZipExtFile name='AnalyzeABTestResults 2/ab_data.csv' mode='r' compress_type=deflate>\n",
+      "<_io.BufferedWriter name='c:\\\\Users\\\\andrw\\\\DataProjects\\\\portfolio\\\\Udacity\\\\Project_3_Analyze AB Test Results\\\\ab_data.csv'>\n",
+      "<zipfile.ZipExtFile name='AnalyzeABTestResults 2/ab_data.csv' mode='r' compress_type=deflate>\n",
+      "<_io.BufferedWriter name='c:\\\\Users\\\\andrw\\\\DataProjects\\\\portfolio\\\\Udacity\\\\Project_3_Analyze AB Test Results\\\\ab_data.csv'>\n",
+      "<zipfile.ZipExtFile name='AnalyzeABTestResults 2/ab_data.csv' mode='r' compress_type=deflate>\n",
+      "<_io.BufferedWriter name='c:\\\\Users\\\\andrw\\\\DataProjects\\\\portfolio\\\\Udacity\\\\Project_3_Analyze AB Test Results\\\\ab_data.csv'>\n",
+      "<zipfile.ZipExtFile name='AnalyzeABTestResults 2/ab_data.csv' mode='r' compress_type=deflate>\n",
+      "<_io.BufferedWriter name='c:\\\\Users\\\\andrw\\\\DataProjects\\\\portfolio\\\\Udacity\\\\Project_3_Analyze AB Test Results\\\\ab_data.csv'>\n",
+      "<zipfile.ZipExtFile name='AnalyzeABTestResults 2/countries.csv' mode='r' compress_type=deflate>\n",
+      "<_io.BufferedWriter name='c:\\\\Users\\\\andrw\\\\DataProjects\\\\portfolio\\\\Udacity\\\\Project_3_Analyze AB Test Results\\\\countries.csv'>\n",
+      "<zipfile.ZipExtFile name='AnalyzeABTestResults 2/countries.csv' mode='r' compress_type=deflate>\n",
+      "<_io.BufferedWriter name='c:\\\\Users\\\\andrw\\\\DataProjects\\\\portfolio\\\\Udacity\\\\Project_3_Analyze AB Test Results\\\\countries.csv'>\n",
+      "<zipfile.ZipExtFile name='AnalyzeABTestResults 2/countries.csv' mode='r' compress_type=deflate>\n",
+      "<_io.BufferedWriter name='c:\\\\Users\\\\andrw\\\\DataProjects\\\\portfolio\\\\Udacity\\\\Project_3_Analyze AB Test Results\\\\countries.csv'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "from zipfile import ZipFile\n",
+    "import shutil\n",
+    "import os\n",
+    "\n",
+    "url = 'https://video.udacity-data.com/topher/2017/December/5a32c9a0_analyzeabtestresults-2/analyzeabtestresults-2.zip'\n",
+    "extract_folder = os.getcwd()\n",
+    "download_dest = extract_folder + '/AnalyzeABTestResults 2'\n",
+    "\n",
+    "r = requests.get(url)\n",
+    "\n",
+    "with open('analyzeabtestresults-2.zip', 'wb') as file:\n",
+    "    file.write(r.content)\n",
+    "\n",
+    "\n",
+    "with ZipFile('analyzeabtestresults-2.zip') as myzip:\n",
+    "    for member in myzip.namelist():\n",
+    "        filename = os.path.basename(member)\n",
+    "        if not filename:\n",
+    "            continue\n",
+    "        \n",
+    "        if filename in ['ab_data.csv', 'countries.csv']:\n",
+    "            source = myzip.open(member)\n",
+    "            target = open(os.path.join(extract_folder, filename), 'wb')\n",
+    "            with source, target:\n",
+    "                shutil.copyfileobj(source, target)\n",
+    "\n",
+    "\n",
+    "# with ZipFile('analyzeabtestresults-2.zip', 'r') as myzip:\n",
+    "#     #myzip.extractall(path=extract_folder)\n",
+    "#     myzip.extract('AnalyzeABTestResults 2/ab_data.csv', path=os.getcwd())\n",
+    "#     myzip.extract('AnalyzeABTestResults 2/countries.csv', path=os.getcwd())\n",
+    "\n",
+    "# files_to_move = ['ab_data.csv', 'countries.csv']\n",
+    "\n",
+    "# for file_name in files_to_move:\n",
+    "#     source = download_dest + '\\\\' + file_name\n",
+    "#     destination = extract_folder\n",
+    "\n",
+    "#     shutil.copy(source, destination)\n",
+    "#     print('Moved: ', file_name)\n",
+    "\n",
+    "# shutil.rmtree(download_dest)\n",
+    "\n",
+    "# print(os.getcwd())\n",
+    "\n"
    ]
   },
   {
@@ -189,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +279,7 @@
        "290584"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +308,7 @@
        "0.11965919355605512"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +337,7 @@
        "3893"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +485,7 @@
        "4   864975  2017-01-21 01:52:26.210827    control     old_page          1"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +507,7 @@
        "0"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +542,7 @@
        "290584"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -513,17 +594,24 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2893</th>\n",
+       "      <td>773192</td>\n",
+       "      <td>2017-01-14 02:55:59.590927</td>\n",
+       "      <td>treatment</td>\n",
+       "      <td>new_page</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [user_id, timestamp, group, landing_page, converted]\n",
-       "Index: []"
+       "      user_id                   timestamp      group landing_page  converted\n",
+       "2893   773192  2017-01-14 02:55:59.590927  treatment     new_page          0"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -573,17 +661,24 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2893</th>\n",
+       "      <td>773192</td>\n",
+       "      <td>2017-01-14 02:55:59.590927</td>\n",
+       "      <td>treatment</td>\n",
+       "      <td>new_page</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [user_id, timestamp, group, landing_page, converted]\n",
-       "Index: []"
+       "      user_id                   timestamp      group landing_page  converted\n",
+       "2893   773192  2017-01-14 02:55:59.590927  treatment     new_page          0"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +723,7 @@
        "0.11959708724499628"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +750,7 @@
        "0.1203863045004612"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -674,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +778,7 @@
        "0.11880806551510564"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -782,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +962,7 @@
        "4   864975  2017-01-21 01:52:26.210827    control     old_page          1"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -878,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -887,7 +982,7 @@
        "0.11959708724499628"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -906,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +1010,7 @@
        "0.11959708724499628"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -934,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -943,7 +1038,7 @@
        "145310"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -962,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -971,7 +1066,7 @@
        "145274"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -990,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -999,7 +1094,7 @@
        "array([0, 0, 0, ..., 0, 0, 0])"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1018,16 +1113,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 0, 0, ..., 0, 0, 0])"
+       "array([1, 0, 0, ..., 0, 0, 0])"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1046,16 +1141,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0013055448072649273"
+       "-0.002039168703315747"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1074,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1092,18 +1187,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "-0.0015782389853555567"
-      ]
-     },
-     "execution_count": 101,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'obs_diff' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_4728/3884558308.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mobs_diff\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'obs_diff' is not defined"
+     ]
     }
    ],
    "source": [
@@ -1112,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1152,7 +1248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1193,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1289,7 +1385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1310,7 +1406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1376,7 +1472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1500,7 +1596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1527,7 +1623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1657,7 +1753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1736,7 +1832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1877,7 +1973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1974,7 +2070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2010,7 +2106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2163,7 +2259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2268,7 +2364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2320,7 +2416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
