--- a/Udacity/Project_4_Wrange and Analyze Data/report/act_report.ipynb
+++ b/Udacity/Project_4_Wrange and Analyze Data/report/act_report.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "At this point, you may be wondering, \"OK, WeRateDogs is a great profile but... what is their most popular content? What are the most common breeds?\" These questions and more will be answered in the following report. I decided to analyze 2000+ tweets from WeRateDogs between the years 2015 and 2017 to solve your doubts.\n",
     "\n",
-    "![doggie](img/dog-portrait.jpg)"
+    "![doggie](../img/dog-portrait.jpg)"
    ]
   },
   {
@@ -31,7 +31,7 @@
     "\n",
     "[WeRateDogs](https://twitter.com/dog_rates) joined Twitter on November, 2015. Since then, they have been one of the most viral and active dog accounts on the platform but... have they always bee so active? We can get a visual representation of **how WeRateDogs have been tweeting** along the timerame analyzed.\n",
     "\n",
-    "![tweets over time](img/tweets_OT.png)"
+    "![tweets over time](../img/tweets_OT.png)"
    ]
   },
   {
@@ -43,7 +43,7 @@
     "\n",
     "It is a really interesting fact knowing about the tweets frequency but you may be wondering, what is the **most common dog breed posted in WeRateDogs?** To answer this, well analyze data from a neural network. This neural network analyzed each of the pictures in WeRateDogs tweets and predicted its breed.\n",
     "\n",
-    "![breeds](img/common_breeds.png)"
+    "![breeds](../img/common_breeds.png)"
    ]
   },
   {
@@ -55,11 +55,11 @@
     "\n",
     "Now we know they like to post pictures of golden retrievers, labrador retrievers an corgis. Let's find out their **most popular tweets** within that range. Their most retweeted tweet is a [doggo realizing he can stand in the pool](https://twitter.com/dog_rates/status/744234799360020481). How cool is that? It has almost 150K retweets by the time I'm writing this! \n",
     "\n",
-    "![most-retweeted](img/most-retweeted.jpg)\n",
+    "![most-retweeted](../img/most-retweeted.jpg)\n",
     "\n",
     "However, not all the popular tweets can be measured in retweets, they can also be done in likes. This [little puppo supporting Toronto Womens March](https://twitter.com/dog_rates/status/822872901745569793) is the champion. More than 125K people have already like him. What are you waiting for?\n",
     "\n",
-    "![most-liked](img/most-liked.jpg)\n"
+    "![most-liked](../img/most-liked.jpg)\n"
    ]
   },
   {
@@ -71,7 +71,7 @@
     "\n",
     "They know that our favourite dogs are the goldens, labradors and corgis and they post about them. The probabilities of going viral with one of those breeds seem to be higher than others. It would be also interesting to analyse their best rated dog breed but we'll leave that for another day.\n",
     "\n",
-    "_More information and files can be found at my [GitHub](https://github.com/aingelmo/Data-Analyst-Nano/tree/main/Project_5_Wrange%20and%20Analyze%20Data)._\n"
+    "_More information and files can be found at my [GitHub](https://github.com/aingelmo/portfolio/tree/main/Udacity/Project_4_Wrange%20and%20Analyze%20Data)._\n"
    ]
   }
  ],
