Updated order and reseted index for final csv

--- a/olympics_tableau/data-wrangling.ipynb
+++ b/olympics_tableau/data-wrangling.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -47,8 +47,8 @@
      "text": [
       "\n",
       "  0%|          | 0.00/5.43M [00:00<?, ?B/s]\n",
-      " 18%|█▊        | 1.00M/5.43M [00:00<00:00, 7.99MB/s]\n",
-      "100%|██████████| 5.43M/5.43M [00:00<00:00, 29.0MB/s]\n"
+      " 18%|█▊        | 1.00M/5.43M [00:00<00:00, 6.73MB/s]\n",
+      "100%|██████████| 5.43M/5.43M [00:00<00:00, 25.3MB/s]\n"
      ]
     },
     {
@@ -65,8 +65,7 @@
      "text": [
       "\n",
       "  0%|          | 0.00/670k [00:00<?, ?B/s]\n",
-      "100%|██████████| 670k/670k [00:00<00:00, 5.96MB/s]\n",
-      "100%|██████████| 670k/670k [00:00<00:00, 5.91MB/s]\n"
+      "100%|██████████| 670k/670k [00:00<00:00, 7.91MB/s]\n"
      ]
     }
    ],
@@ -104,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +282,7 @@
        "41  Gymnastics Men's Individual All-Around  Bronze  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +441,7 @@
        "4             Mexico  Mixed Team         ALVAREZ Luis  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +553,7 @@
        "4    1.92   32      ABALDE Tamara"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -730,7 +729,7 @@
        "4  Republic of Korea  Women's Individual       AN San     0.0   20  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -743,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -784,83 +783,83 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Edgar Lindenau Aabye</td>\n",
+       "      <th>0</th>\n",
+       "      <td>Edward Battel</td>\n",
        "      <td>M</td>\n",
-       "      <td>34</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>Denmark/Sweden</td>\n",
-       "      <td>DEN</td>\n",
-       "      <td>1900 Summer</td>\n",
-       "      <td>1900</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Great Britain</td>\n",
+       "      <td>GBR</td>\n",
+       "      <td>1896 Summer</td>\n",
+       "      <td>1896</td>\n",
        "      <td>Summer</td>\n",
-       "      <td>Paris</td>\n",
-       "      <td>Tug-Of-War</td>\n",
-       "      <td>Tug-Of-War Men's Tug-Of-War</td>\n",
-       "      <td>Gold</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37</th>\n",
-       "      <td>Arvo Ossian Aaltonen</td>\n",
-       "      <td>M</td>\n",
-       "      <td>30</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>Finland</td>\n",
-       "      <td>FIN</td>\n",
-       "      <td>1920 Summer</td>\n",
-       "      <td>1920</td>\n",
-       "      <td>Summer</td>\n",
-       "      <td>Antwerpen</td>\n",
-       "      <td>Swimming</td>\n",
-       "      <td>Swimming Men's 200 metres Breaststroke</td>\n",
+       "      <td>Athina</td>\n",
+       "      <td>Cycling</td>\n",
+       "      <td>Cycling Men's Road Race, Individual</td>\n",
        "      <td>Bronze</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>38</th>\n",
-       "      <td>Arvo Ossian Aaltonen</td>\n",
+       "      <th>1</th>\n",
+       "      <td>Athanasios Vouros</td>\n",
        "      <td>M</td>\n",
-       "      <td>30</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>Finland</td>\n",
-       "      <td>FIN</td>\n",
-       "      <td>1920 Summer</td>\n",
-       "      <td>1920</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Greece</td>\n",
+       "      <td>GRE</td>\n",
+       "      <td>1896 Summer</td>\n",
+       "      <td>1896</td>\n",
        "      <td>Summer</td>\n",
-       "      <td>Antwerpen</td>\n",
-       "      <td>Swimming</td>\n",
-       "      <td>Swimming Men's 400 metres Breaststroke</td>\n",
+       "      <td>Athina</td>\n",
+       "      <td>Fencing</td>\n",
+       "      <td>Fencing Men's Foil, Individual</td>\n",
        "      <td>Bronze</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>Juhamatti Tapio Aaltonen</td>\n",
+       "      <th>2</th>\n",
+       "      <td>Petros Persakis</td>\n",
        "      <td>M</td>\n",
-       "      <td>28</td>\n",
-       "      <td>1.84</td>\n",
-       "      <td>Finland</td>\n",
-       "      <td>FIN</td>\n",
-       "      <td>2014 Winter</td>\n",
-       "      <td>2014</td>\n",
-       "      <td>Winter</td>\n",
-       "      <td>Sochi</td>\n",
-       "      <td>Ice Hockey</td>\n",
-       "      <td>Ice Hockey Men's Ice Hockey</td>\n",
-       "      <td>Bronze</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41</th>\n",
-       "      <td>Paavo Johannes Aaltonen</td>\n",
-       "      <td>M</td>\n",
-       "      <td>28</td>\n",
-       "      <td>1.75</td>\n",
-       "      <td>Finland</td>\n",
-       "      <td>FIN</td>\n",
-       "      <td>1948 Summer</td>\n",
-       "      <td>1948</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Greece</td>\n",
+       "      <td>GRE</td>\n",
+       "      <td>1896 Summer</td>\n",
+       "      <td>1896</td>\n",
        "      <td>Summer</td>\n",
-       "      <td>London</td>\n",
+       "      <td>Athina</td>\n",
        "      <td>Gymnastics</td>\n",
-       "      <td>Gymnastics Men's Individual All-Around</td>\n",
+       "      <td>Gymnastics Men's Rings</td>\n",
+       "      <td>Bronze</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Nikolaos Trikoupis</td>\n",
+       "      <td>M</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Greece</td>\n",
+       "      <td>GRE</td>\n",
+       "      <td>1896 Summer</td>\n",
+       "      <td>1896</td>\n",
+       "      <td>Summer</td>\n",
+       "      <td>Athina</td>\n",
+       "      <td>Shooting</td>\n",
+       "      <td>Shooting Men's Military Rifle, 200 metres</td>\n",
+       "      <td>Bronze</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Ioannis Persakis</td>\n",
+       "      <td>M</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Greece</td>\n",
+       "      <td>GRE</td>\n",
+       "      <td>1896 Summer</td>\n",
+       "      <td>1896</td>\n",
+       "      <td>Summer</td>\n",
+       "      <td>Athina</td>\n",
+       "      <td>Athletics</td>\n",
+       "      <td>Athletics Men's Triple Jump</td>\n",
        "      <td>Bronze</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -868,29 +867,29 @@
        "</div>"
       ],
       "text/plain": [
-       "                        Name Sex  Age  Height            Team  NOC  \\\n",
-       "3       Edgar Lindenau Aabye   M   34    0.00  Denmark/Sweden  DEN   \n",
-       "37      Arvo Ossian Aaltonen   M   30    0.00         Finland  FIN   \n",
-       "38      Arvo Ossian Aaltonen   M   30    0.00         Finland  FIN   \n",
-       "40  Juhamatti Tapio Aaltonen   M   28    1.84         Finland  FIN   \n",
-       "41   Paavo Johannes Aaltonen   M   28    1.75         Finland  FIN   \n",
+       "                 Name Sex  Age  Height           Team  NOC        Games  Year  \\\n",
+       "0       Edward Battel   M    0     0.0  Great Britain  GBR  1896 Summer  1896   \n",
+       "1   Athanasios Vouros   M    0     0.0         Greece  GRE  1896 Summer  1896   \n",
+       "2     Petros Persakis   M    0     0.0         Greece  GRE  1896 Summer  1896   \n",
+       "3  Nikolaos Trikoupis   M    0     0.0         Greece  GRE  1896 Summer  1896   \n",
+       "4    Ioannis Persakis   M    0     0.0         Greece  GRE  1896 Summer  1896   \n",
        "\n",
-       "          Games  Year  Season       City       Sport  \\\n",
-       "3   1900 Summer  1900  Summer      Paris  Tug-Of-War   \n",
-       "37  1920 Summer  1920  Summer  Antwerpen    Swimming   \n",
-       "38  1920 Summer  1920  Summer  Antwerpen    Swimming   \n",
-       "40  2014 Winter  2014  Winter      Sochi  Ice Hockey   \n",
-       "41  1948 Summer  1948  Summer     London  Gymnastics   \n",
+       "   Season    City       Sport                                      Event  \\\n",
+       "0  Summer  Athina     Cycling        Cycling Men's Road Race, Individual   \n",
+       "1  Summer  Athina     Fencing             Fencing Men's Foil, Individual   \n",
+       "2  Summer  Athina  Gymnastics                     Gymnastics Men's Rings   \n",
+       "3  Summer  Athina    Shooting  Shooting Men's Military Rifle, 200 metres   \n",
+       "4  Summer  Athina   Athletics                Athletics Men's Triple Jump   \n",
        "\n",
-       "                                     Event   Medal  \n",
-       "3              Tug-Of-War Men's Tug-Of-War    Gold  \n",
-       "37  Swimming Men's 200 metres Breaststroke  Bronze  \n",
-       "38  Swimming Men's 400 metres Breaststroke  Bronze  \n",
-       "40             Ice Hockey Men's Ice Hockey  Bronze  \n",
-       "41  Gymnastics Men's Individual All-Around  Bronze  "
+       "    Medal  \n",
+       "0  Bronze  \n",
+       "1  Bronze  \n",
+       "2  Bronze  \n",
+       "3  Bronze  \n",
+       "4  Bronze  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -898,6 +897,11 @@
    "source": [
     "## Merge tokyo dataframe with historic\n",
     "historic = df_clean.append(medals_athletes)\n",
+    "## Sort values by edition\n",
+    "historic = historic.sort_values('Year', ascending=True)\n",
+    "## Reset index\n",
+    "historic = historic.reset_index(drop=True)\n",
+    "\n",
     "historic.head()"
    ]
   },
@@ -910,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
