Set height in cm

--- a/olympics_tableau/data-wrangling.ipynb
+++ b/olympics_tableau/data-wrangling.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -47,8 +47,8 @@
      "text": [
       "\n",
       "  0%|          | 0.00/5.43M [00:00<?, ?B/s]\n",
-      " 18%|█▊        | 1.00M/5.43M [00:00<00:00, 6.73MB/s]\n",
-      "100%|██████████| 5.43M/5.43M [00:00<00:00, 25.3MB/s]\n"
+      " 18%|█▊        | 1.00M/5.43M [00:00<00:00, 8.71MB/s]\n",
+      "100%|██████████| 5.43M/5.43M [00:00<00:00, 31.0MB/s]\n"
      ]
     },
     {
@@ -65,7 +65,7 @@
      "text": [
       "\n",
       "  0%|          | 0.00/670k [00:00<?, ?B/s]\n",
-      "100%|██████████| 670k/670k [00:00<00:00, 7.91MB/s]\n"
+      "100%|██████████| 670k/670k [00:00<00:00, 8.26MB/s]\n"
      ]
     }
    ],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
        "      <td>Edgar Lindenau Aabye</td>\n",
        "      <td>M</td>\n",
        "      <td>34</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>0</td>\n",
        "      <td>Denmark/Sweden</td>\n",
        "      <td>DEN</td>\n",
        "      <td>1900 Summer</td>\n",
@@ -196,7 +196,7 @@
        "      <td>Arvo Ossian Aaltonen</td>\n",
        "      <td>M</td>\n",
        "      <td>30</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>0</td>\n",
        "      <td>Finland</td>\n",
        "      <td>FIN</td>\n",
        "      <td>1920 Summer</td>\n",
@@ -212,7 +212,7 @@
        "      <td>Arvo Ossian Aaltonen</td>\n",
        "      <td>M</td>\n",
        "      <td>30</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>0</td>\n",
        "      <td>Finland</td>\n",
        "      <td>FIN</td>\n",
        "      <td>1920 Summer</td>\n",
@@ -228,7 +228,7 @@
        "      <td>Juhamatti Tapio Aaltonen</td>\n",
        "      <td>M</td>\n",
        "      <td>28</td>\n",
-       "      <td>1.84</td>\n",
+       "      <td>184</td>\n",
        "      <td>Finland</td>\n",
        "      <td>FIN</td>\n",
        "      <td>2014 Winter</td>\n",
@@ -244,7 +244,7 @@
        "      <td>Paavo Johannes Aaltonen</td>\n",
        "      <td>M</td>\n",
        "      <td>28</td>\n",
-       "      <td>1.75</td>\n",
+       "      <td>175</td>\n",
        "      <td>Finland</td>\n",
        "      <td>FIN</td>\n",
        "      <td>1948 Summer</td>\n",
@@ -261,11 +261,11 @@
       ],
       "text/plain": [
        "                        Name Sex  Age  Height            Team  NOC  \\\n",
-       "3       Edgar Lindenau Aabye   M   34    0.00  Denmark/Sweden  DEN   \n",
-       "37      Arvo Ossian Aaltonen   M   30    0.00         Finland  FIN   \n",
-       "38      Arvo Ossian Aaltonen   M   30    0.00         Finland  FIN   \n",
-       "40  Juhamatti Tapio Aaltonen   M   28    1.84         Finland  FIN   \n",
-       "41   Paavo Johannes Aaltonen   M   28    1.75         Finland  FIN   \n",
+       "3       Edgar Lindenau Aabye   M   34       0  Denmark/Sweden  DEN   \n",
+       "37      Arvo Ossian Aaltonen   M   30       0         Finland  FIN   \n",
+       "38      Arvo Ossian Aaltonen   M   30       0         Finland  FIN   \n",
+       "40  Juhamatti Tapio Aaltonen   M   28     184         Finland  FIN   \n",
+       "41   Paavo Johannes Aaltonen   M   28     175         Finland  FIN   \n",
        "\n",
        "          Games  Year  Season       City       Sport  \\\n",
        "3   1900 Summer  1900  Summer      Paris  Tug-Of-War   \n",
@@ -282,7 +282,7 @@
        "41  Gymnastics Men's Individual All-Around  Bronze  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,10 +296,9 @@
     "### Remove unnecessary columns\n",
     "df_clean = df_clean[df_clean.columns[1:]]\n",
     "df_clean = df_clean.drop('Weight', axis=1)\n",
-    "### Normalize height\n",
-    "df_clean['Height'] = df_clean['Height'] / 100\n",
     "### Fix datatypes\n",
     "df_clean['Age'] = df_clean['Age'].astype(int)\n",
+    "df_clean['Height'] = df_clean['Height'].astype(int)\n",
     "\n",
     "df_clean.head()"
    ]
@@ -313,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +440,7 @@
        "4             Mexico  Mixed Team         ALVAREZ Luis  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -512,31 +511,31 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.00</td>\n",
+       "      <td>0</td>\n",
        "      <td>26</td>\n",
        "      <td>AALERUD Katrine</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1.65</td>\n",
+       "      <td>165</td>\n",
        "      <td>28</td>\n",
        "      <td>ABAD Nestor</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1.98</td>\n",
+       "      <td>198</td>\n",
        "      <td>26</td>\n",
        "      <td>ABAGNALE Giovanni</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2.00</td>\n",
+       "      <td>200</td>\n",
        "      <td>25</td>\n",
        "      <td>ABALDE Alberto</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1.92</td>\n",
+       "      <td>192</td>\n",
        "      <td>32</td>\n",
        "      <td>ABALDE Tamara</td>\n",
        "    </tr>\n",
@@ -546,14 +545,14 @@
       ],
       "text/plain": [
        "   Height  Age               Name\n",
-       "0    0.00   26    AALERUD Katrine\n",
-       "1    1.65   28        ABAD Nestor\n",
-       "2    1.98   26  ABAGNALE Giovanni\n",
-       "3    2.00   25     ABALDE Alberto\n",
-       "4    1.92   32      ABALDE Tamara"
+       "0       0   26    AALERUD Katrine\n",
+       "1     165   28        ABAD Nestor\n",
+       "2     198   26  ABAGNALE Giovanni\n",
+       "3     200   25     ABALDE Alberto\n",
+       "4     192   32      ABALDE Tamara"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,8 +561,9 @@
     "## Athletes dataframe\n",
     "### Create a copy\n",
     "athletes_clean = athletes.copy()\n",
-    "### Get height in meters\n",
-    "athletes_clean['Height'] = athletes_clean[athletes_clean['height_m/ft'].notnull()]['height_m/ft'].apply(lambda x: x.split('/')[0])\n",
+    "### Get height in centimeters\n",
+    "athletes_clean['Height'] = athletes_clean[athletes_clean['height_m/ft'].notnull()]['height_m/ft'].apply(lambda x: x.split('/')[0]).astype(float)\n",
+    "athletes_clean['Height'] = athletes_clean['Height'] * 100\n",
     "### Fill missing values\n",
     "athletes_clean = athletes_clean.fillna(0)\n",
     "### Get age of athletes \n",
@@ -573,7 +573,7 @@
     "athletes_clean['Name'] = athletes_clean['name']\n",
     "athletes_clean['Country'] = athletes_clean['country']\n",
     "### Fix datatypes\n",
-    "athletes_clean['Height'] = athletes_clean['Height'].astype(float)\n",
+    "athletes_clean['Height'] = athletes_clean['Height'].astype(int)\n",
     "### Remove unnecessary columns\n",
     "athletes_clean = athletes_clean[athletes_clean.columns[-4:-1]]\n",
     "\n",
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +642,7 @@
        "      <td>Republic of Korea</td>\n",
        "      <td>Mixed Team</td>\n",
        "      <td>KIM Je Deok</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -658,7 +658,7 @@
        "      <td>Republic of Korea</td>\n",
        "      <td>Men's Team</td>\n",
        "      <td>KIM Je Deok</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -674,7 +674,7 @@
        "      <td>Republic of Korea</td>\n",
        "      <td>Mixed Team</td>\n",
        "      <td>AN San</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -690,7 +690,7 @@
        "      <td>Republic of Korea</td>\n",
        "      <td>Women's Team</td>\n",
        "      <td>AN San</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -706,7 +706,7 @@
        "      <td>Republic of Korea</td>\n",
        "      <td>Women's Individual</td>\n",
        "      <td>AN San</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>20</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -722,14 +722,14 @@
        "4  2021  Gold  2021 Summer  Summer  Tokyo   W  Archery  KOR   \n",
        "\n",
        "                Team               Event         Name  Height  Age  \n",
-       "0  Republic of Korea          Mixed Team  KIM Je Deok     0.0   17  \n",
-       "1  Republic of Korea          Men's Team  KIM Je Deok     0.0   17  \n",
-       "2  Republic of Korea          Mixed Team       AN San     0.0   20  \n",
-       "3  Republic of Korea        Women's Team       AN San     0.0   20  \n",
-       "4  Republic of Korea  Women's Individual       AN San     0.0   20  "
+       "0  Republic of Korea          Mixed Team  KIM Je Deok       0   17  \n",
+       "1  Republic of Korea          Men's Team  KIM Je Deok       0   17  \n",
+       "2  Republic of Korea          Mixed Team       AN San       0   20  \n",
+       "3  Republic of Korea        Women's Team       AN San       0   20  \n",
+       "4  Republic of Korea  Women's Individual       AN San       0   20  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +787,7 @@
        "      <td>Edward Battel</td>\n",
        "      <td>M</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>Great Britain</td>\n",
        "      <td>GBR</td>\n",
        "      <td>1896 Summer</td>\n",
@@ -803,7 +803,7 @@
        "      <td>Athanasios Vouros</td>\n",
        "      <td>M</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>Greece</td>\n",
        "      <td>GRE</td>\n",
        "      <td>1896 Summer</td>\n",
@@ -819,7 +819,7 @@
        "      <td>Petros Persakis</td>\n",
        "      <td>M</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>Greece</td>\n",
        "      <td>GRE</td>\n",
        "      <td>1896 Summer</td>\n",
@@ -835,7 +835,7 @@
        "      <td>Nikolaos Trikoupis</td>\n",
        "      <td>M</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>Greece</td>\n",
        "      <td>GRE</td>\n",
        "      <td>1896 Summer</td>\n",
@@ -851,7 +851,7 @@
        "      <td>Ioannis Persakis</td>\n",
        "      <td>M</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
        "      <td>Greece</td>\n",
        "      <td>GRE</td>\n",
        "      <td>1896 Summer</td>\n",
@@ -868,11 +868,11 @@
       ],
       "text/plain": [
        "                 Name Sex  Age  Height           Team  NOC        Games  Year  \\\n",
-       "0       Edward Battel   M    0     0.0  Great Britain  GBR  1896 Summer  1896   \n",
-       "1   Athanasios Vouros   M    0     0.0         Greece  GRE  1896 Summer  1896   \n",
-       "2     Petros Persakis   M    0     0.0         Greece  GRE  1896 Summer  1896   \n",
-       "3  Nikolaos Trikoupis   M    0     0.0         Greece  GRE  1896 Summer  1896   \n",
-       "4    Ioannis Persakis   M    0     0.0         Greece  GRE  1896 Summer  1896   \n",
+       "0       Edward Battel   M    0       0  Great Britain  GBR  1896 Summer  1896   \n",
+       "1   Athanasios Vouros   M    0       0         Greece  GRE  1896 Summer  1896   \n",
+       "2     Petros Persakis   M    0       0         Greece  GRE  1896 Summer  1896   \n",
+       "3  Nikolaos Trikoupis   M    0       0         Greece  GRE  1896 Summer  1896   \n",
+       "4    Ioannis Persakis   M    0       0         Greece  GRE  1896 Summer  1896   \n",
        "\n",
        "   Season    City       Sport                                      Event  \\\n",
        "0  Summer  Athina     Cycling        Cycling Men's Road Race, Individual   \n",
@@ -889,7 +889,7 @@
        "4  Bronze  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -914,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
