Normalize Gender for Tableau

--- a/olympics_tableau/data-wrangling.ipynb
+++ b/olympics_tableau/data-wrangling.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -47,8 +47,8 @@
      "text": [
       "\n",
       "  0%|          | 0.00/5.43M [00:00<?, ?B/s]\n",
-      " 18%|█▊        | 1.00M/5.43M [00:00<00:00, 8.71MB/s]\n",
-      "100%|██████████| 5.43M/5.43M [00:00<00:00, 31.0MB/s]\n"
+      " 92%|█████████▏| 5.00M/5.43M [00:00<00:00, 48.4MB/s]\n",
+      "100%|██████████| 5.43M/5.43M [00:00<00:00, 49.9MB/s]\n"
      ]
     },
     {
@@ -65,7 +65,8 @@
      "text": [
       "\n",
       "  0%|          | 0.00/670k [00:00<?, ?B/s]\n",
-      "100%|██████████| 670k/670k [00:00<00:00, 8.26MB/s]\n"
+      "100%|██████████| 670k/670k [00:00<00:00, 6.41MB/s]\n",
+      "100%|██████████| 670k/670k [00:00<00:00, 6.35MB/s]\n"
      ]
     }
    ],
@@ -103,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +283,7 @@
        "41  Gymnastics Men's Individual All-Around  Bronze  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +441,7 @@
        "4             Mexico  Mixed Team         ALVAREZ Luis  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,18 +453,20 @@
     "### Convert date to datetime\n",
     "medals_clean['Year'] = pd.to_datetime(medals['medal_date']).dt.year\n",
     "### Get medal type\n",
-    "medals_clean['Medal'] = medals['medal_type'].apply(lambda x: x.split(' ')[0])\n",
+    "medals_clean['Medal'] = medals_clean['medal_type'].apply(lambda x: x.split(' ')[0])\n",
     "### Add column with the games edition and additional information\n",
     "medals_clean['Games'] = '2021 Summer'\n",
     "medals_clean['Season'] = 'Summer'\n",
     "medals_clean['City'] = 'Tokyo'\n",
+    "### Normalize sex to merge columns\n",
+    "medals_clean['athlete_sex'] = medals_clean['athlete_sex'].apply(lambda x: 'F' if x == 'W' else x)\n",
     "### Rename some columns to match the historic dataframe\n",
-    "medals_clean['Sex'] = medals['athlete_sex']\n",
-    "medals_clean['Sport'] = medals['discipline']\n",
-    "medals_clean['NOC'] = medals['country_code']\n",
-    "medals_clean['Team'] = medals['country']\n",
-    "medals_clean['Event'] = medals['event']\n",
-    "medals_clean['Name'] = medals['athlete_name']\n",
+    "medals_clean['Sex'] = medals_clean['athlete_sex']\n",
+    "medals_clean['Sport'] = medals_clean['discipline']\n",
+    "medals_clean['NOC'] = medals_clean['country_code']\n",
+    "medals_clean['Team'] = medals_clean['country']\n",
+    "medals_clean['Event'] = medals_clean['event']\n",
+    "medals_clean['Name'] = medals_clean['athlete_name']\n",
     "### Drop unnecessary columns\n",
     "medals_clean = medals_clean[medals_clean.columns[-11:]]\n",
     "\n",
@@ -479,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +555,7 @@
        "4     192   32      ABALDE Tamara"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +687,7 @@
        "      <td>2021 Summer</td>\n",
        "      <td>Summer</td>\n",
        "      <td>Tokyo</td>\n",
-       "      <td>W</td>\n",
+       "      <td>F</td>\n",
        "      <td>Archery</td>\n",
        "      <td>KOR</td>\n",
        "      <td>Republic of Korea</td>\n",
@@ -700,7 +703,7 @@
        "      <td>2021 Summer</td>\n",
        "      <td>Summer</td>\n",
        "      <td>Tokyo</td>\n",
-       "      <td>W</td>\n",
+       "      <td>F</td>\n",
        "      <td>Archery</td>\n",
        "      <td>KOR</td>\n",
        "      <td>Republic of Korea</td>\n",
@@ -718,8 +721,8 @@
        "0  2021  Gold  2021 Summer  Summer  Tokyo   X  Archery  KOR   \n",
        "1  2021  Gold  2021 Summer  Summer  Tokyo   M  Archery  KOR   \n",
        "2  2021  Gold  2021 Summer  Summer  Tokyo   X  Archery  KOR   \n",
-       "3  2021  Gold  2021 Summer  Summer  Tokyo   W  Archery  KOR   \n",
-       "4  2021  Gold  2021 Summer  Summer  Tokyo   W  Archery  KOR   \n",
+       "3  2021  Gold  2021 Summer  Summer  Tokyo   F  Archery  KOR   \n",
+       "4  2021  Gold  2021 Summer  Summer  Tokyo   F  Archery  KOR   \n",
        "\n",
        "                Team               Event         Name  Height  Age  \n",
        "0  Republic of Korea          Mixed Team  KIM Je Deok       0   17  \n",
@@ -729,7 +732,7 @@
        "4  Republic of Korea  Women's Individual       AN San       0   20  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -889,7 +892,7 @@
        "4  Bronze  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -906,6 +909,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "M    29656\n",
+       "F    12361\n",
+       "X      143\n",
+       "O       36\n",
+       "Name: Sex, dtype: int64"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "historic['Sex'].value_counts()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -914,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
